--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header__contacts contacts">
           <a class="contacts__link contacts__link--mail" href="mailto:info@sd.ru"><svg aria-hidden="true" role="presentation" width="18" height="18"><use xlink:href="img/sprite_auto.svg#icon-envelope"></use></svg><span>info@sd.ru</span></a>
           <a class="contacts__link contacts__link--tel" href="tel:+74950005252"><svg aria-hidden="true" role="presentation" width="18" height="18"><use xlink:href="img/sprite_auto.svg#icon-phone-call"></use></svg><span>+7&nbsp;(495)&nbsp;000&nbsp;52&nbsp;52</span></a>
-          <button class="button contacts__button" type="button" href="#">Заказать&nbsp;звонок</button>
+          <button class="button contacts__button" type="button">Заказать&nbsp;звонок</button>
         </div>
       </div>
       <div class="header__main">
@@ -178,11 +178,13 @@
       </div>
       <div class="footer__footer">
         <p class="footer__confidentiality"><a href="#">Условия конфиденциальности</a></p>
-        <a class="footer__developed">Developed by wow studio</a>
+        <p class="footer__developed">
+          <a href="#">Developed by wow studio</a>
+        </p>
       </div>
     </div>
   </footer>
-  <section class="overlay"></section>
+  <div class="overlay"></div>
   <section class="modal">
     <button class="button modal__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
     <h2 class="visually-hidden">Консультация</h2>
@@ -208,6 +210,7 @@
       <button type="submit">Отправить</button>
     </form>
   </section>
+  <script src="https://unpkg.com/imask"></script>
   <script src="js/script.js"></script>
   <script src="js/libs.js"></script>
 </body>
